cocktail.ui: alignment fix for the looking glass icon on search inputs

--- a/cocktail/ui/resources/styles/cocktail-ui-searchinput.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-searchinput.scss
@@ -10,7 +10,7 @@ input {
 #icon {
     position: absolute;
     left: 0.2em;
-    top: 0.1em;
+    top: 0.3em;
 
     svg {
         width: 1em;
